Fixed minor spacing bug.

--- a/My-Portfolio/src/components/Education/Education.module.css
+++ b/My-Portfolio/src/components/Education/Education.module.css
@@ -35,6 +35,7 @@
     padding: 49px; /* Added padding for inner spacing */
     margin-top: 40px;
     margin-bottom: 70px;
+    margin-right: 0px;
 }
 
 .osu_image {
